22003-04-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSXML.m: ([-content]) fix to produce string
	content of elements rather than just text nodes.

22003-04-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCalendarDate.m: ([initWithString:calendarFormat:locale:])
	add support for %F millisecond initialisation.
	make trivial simplification of timezone handling.
	on failure to parse zone using %z, use local time zone.

2003-03-31  Stephane Corthesy <stephane@sente.ch>

	* Source/Additions/GCArray.m: Replace retain/release by 
	RETAIN/RELEASE macros.
	* Source/Additions/GCDictionary.m: Idem.

	* Source/Additions/GSCompatibility.h: Add NSBundle category.
	* Source/Additions/GSCompatibility.m (GSEncodingName): New.
	Add -[NSBundle pathForGNUstepResource:ofType:inDirectory:].

	* Source/Additions/GSObjCRuntime.m: Include GNUstep.h.
	(GSObjCMethodNames): Cast method_name to const char *.

2003-03-31  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/Foundation.h: Add GSCategories.h

2003-03-30  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSString.h: (stringByTrimmingLeadSpaces,
	stringByTrimmingTailSpaces, stringByTrimmingSpaces, 
	stringByReplacingString:withString:, replaceString:withString:,
	trimLeadSpaces, trimTailSpaces, trimSpaces): Move to GSCategories.h
	* Headers/gnustep/base/NSValue.h (valueFromString): Idem.
	* Source/NSNumber.m (valueFromString:): Move to GSCategories.m
	* Source/NSString.m: Idem as above.
	* Source/Additions/GSCategories.m: Methods moved here.
	* Source/Additions/GSCompatibility.h: Rearrange, add
	NSDistantObject, NSFileHandle category, GSCurrentThreadDictionary().
	* Source/Additions/GSCompatibility.m: Add GSCurrentThreadDictionary
	NSDistantObject, and NSFileHandle methods.

2003-03-28 20:48  Alexander Malmberg <alexander@malmberg.org>

	* configure.ac: Fail the configure if neither ffcall nor ffi is
	available unless --disable-do is passed to configure. Add a message