@@ -2,6 +2,9 @@
 
 	* Source/Additions/GSXML.m: ([-content]) fix to produce string
 	content of elements rather than just text nodes.
+	* Source/GSMime.m: ([-rawMimeData]) ensure that the transfer encoding
+	of a multipart document is 8bit if any of its constituent parts are
+	not 7bit
 
 22003-04-01  Richard Frith-Macdonald <rfm@gnu.org>
 
